# trace-alpha

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
app/: CMakeLists.txt  resources.qrc  trace.rc
assets/icons/export/: README.txt  trace.icns
docs/: release-notes-alpha.md  windows-validation-checklist.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/core/: FrameCache.cpp  FrameCache.h  FrameSource.h  ImageSequenceFrameSource.cpp  ImageSequenceFrameSource.h  MediaItem.h  PlaybackController.cpp  PlaybackController.h  PlaybackPrefetcher.cpp  PlaybackPrefetcher.h  PlaybackState.h  SequenceDescriptor.h  SequenceParser.cpp  SequenceParser.h  StillImageLoader.cpp  StillImageLoader.h  TimeFormat.cpp  TimeFormat.h  VideoDecoderFFmpeg.cpp  VideoDecoderFFmpeg.h  VideoFrameSource.cpp  VideoFrameSource.h  ViewState.h
src/ui/: TransportOverlay.cpp  TransportOverlay.h  ViewerWidget.cpp  ViewerWidget.h
